[package]
name = "ristretto255-hd-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.5", default-features = false }
curve25519-dalek = { version = "4.1.3", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["rand_core"] }
